<resources>
    <string name="app_name">MyPhysicsApps2</string>
    <string name="dashboardCourse">Materi</string>
    <string name="analogi">Analogi</string>
    <string name="dashboardVideo">Video</string>
    <string name="dashboardJudul">Hi, Siswa dan Siswi</string>
    <string name="dashboardQuiz">Quiz</string>
    <string name="dashboardNote">Note</string>
    <string name="itungquiz">Q%d</string>
    <string name="question">Pertanyaan</string>
    <string name="option">Pilih</string>
    <string name="result_title">Nilai</string>
    <string name="result_score">%d / 12</string>
    <string name="btnTry">Coba Lagi</string>
    <string name="sekolah">SMP Pelita Depok</string>
    <string name="apps">Physics Apps V.0.1</string>
    <string name="about">About</string>
</resources>