<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".quiz.hasilQuizActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        android:textSize="22sp"
        android:gravity="center"
        android:fontFamily="@font/poppins_bold"/>

    <TextView
        android:id="@+id/labelItungQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/result_score"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="50dp"/>
    <Button
        android:id="@+id/btnCobalagi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btnTry"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btnbackdashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="Halaman utama"
        android:gravity="center"
        android:layout_marginTop="30dp"/>



</LinearLayout>