<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboardlarge"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/btnMateri"
        android:layout_width="126dp"
        android:layout_height="135dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="#78B762"
        app:cardCornerRadius="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnVideo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228">

        <ImageView
            android:id="@+id/imgcrdmateri"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center|top"
            android:foregroundGravity="center"
            android:src="@drawable/materi" />

        <TextView
            android:id="@+id/txtcrdmateri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:fontFamily="@font/poppins"
            android:text="@string/dashboardCourse"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnVideo"
        android:layout_width="126dp"
        android:layout_height="135dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#1D364E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toEndOf="@+id/btnMateri"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228">

        <ImageView
            android:id="@+id/imgcrdvideo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center|top"
            android:foregroundGravity="center"
            android:src="@drawable/loadingamico" />

        <TextView
            android:id="@+id/txtcrdvideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:fontFamily="@font/poppins"
            android:text="@string/dashboardVideo"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnKuiz"
        android:layout_width="126dp"
        android:layout_height="135dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="#A83535"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMateri"
        app:layout_constraintVertical_bias="0.119">

        <ImageView
            android:id="@+id/imgcrdkuiz"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center|top"
            android:foregroundGravity="center"
            android:src="@drawable/customersurveyamico" />

        <TextView
            android:id="@+id/txtcrdkuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:fontFamily="@font/poppins"
            android:text="@string/dashboardQuiz"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnNote"
        android:layout_width="126dp"
        android:layout_height="135dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="#837F5F"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toEndOf="@+id/btnKuiz"
        app:layout_constraintTop_toBottomOf="@+id/btnVideo"
        app:layout_constraintVertical_bias="0.116">

        <ImageView
            android:id="@+id/imgcrdnote"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center|top"
            android:foregroundGravity="center"
            android:src="@drawable/taskcuate" />

        <TextView
            android:id="@+id/txtcrdnote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:fontFamily="@font/poppins"
            android:text="@string/dashboardNote"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnAbout"
        android:layout_width="126dp"
        android:layout_height="135dp"
        app:cardBackgroundColor="#1F5B93"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnNote"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/btnKuiz"
        app:layout_constraintTop_toBottomOf="@+id/btnVideo"
        app:layout_constraintVertical_bias="0.6">

        <ImageView
            android:id="@+id/imgcrdabout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center|top"
            android:foregroundGravity="center"
            android:src="@drawable/faq" />

        <TextView
            android:id="@+id/txtcrdabout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:fontFamily="@font/poppins"
            android:text="@string/about"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/siswasiswi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/dashboardJudul"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sekolah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins"
        android:text="@string/sekolah"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/siswasiswi"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/siswasiswi"
        app:layout_constraintTop_toBottomOf="@+id/siswasiswi" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/apps"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>