<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bbactivity"
    tools:ignore="OnClick"
    tools:context=".quiz.QuizActivity">

    <TextView
        android:id="@+id/itungQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itungquiz"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/question"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/itungQuiz"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/itungQuiz"
        app:layout_constraintTop_toBottomOf="@+id/itungQuiz"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/btn_pilih1"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins"
        android:onClick="checkAnswer"
        android:text="@string/option"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/question"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/question"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.164" />

    <Button
        android:id="@+id/btn_pilih3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:onClick="checkAnswer"
        android:text="@string/option"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/question"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/question"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.489" />

    <Button
        android:id="@+id/btn_pilih2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:onClick="checkAnswer"
        android:text="@string/option"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/question"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/question"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.327" />

    <Button
        android:id="@+id/btn_pilih4"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:onClick="checkAnswer"
        android:text="@string/option"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/question"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/question"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.651" />

    <TextView
        android:id="@+id/Beginner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Beginner"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/itungQuiz"
        app:layout_constraintEnd_toEndOf="@+id/itungQuiz"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="@+id/itungQuiz"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363" />
</androidx.constraintlayout.widget.ConstraintLayout>